[package]
name = "ctest"
version = "0.1.0"
edition = "2024"

[lib]
name = "ctest"
path = "src/lib.rs"

[[bin]]
name = "tritium-test"
path = "src/bin/tritium_test.rs"

[[bin]]
name = "c14-test"
path = "src/bin/c14_test.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
